--- a/docs/fitness3.css
+++ b/docs/fitness3.css
@@ -135,15 +135,15 @@ section .imgBx img{
   }
 }
 @media (max-width:991px) {
-  .menuIcon{
+.menuIcon{
     position: fixed;
     top: 40px;
     right:40px;
-    width: 30px;
-    height: 80px;
+    width: 40px;
+    height: 45px;
     background: url("menu.png");
     filter: invert(1);
-    background-size: 50px;
+    background-size: 60px;
     cursor: pointer;
     background-repeat: no-repeat;
     z-index: 1000;
@@ -165,20 +165,21 @@ section .imgBx img{
     height: 100%;
     background: rgba(0, 0, 0, 0.95);
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     z-index: 11;
     border: none;
     padding: 50px;
   }
   .nav.active{
-    left: 45%;
-  }
-  .nav.active li{
-    padding:35px;
-    font-size:45px;
+    left: 0;
+
+
   }
   .nav li{
-    margin-top:5px 0;
-    
+    margin-top:-15px 0;
+    font-size: 52px;
+    padding:15px;
   }
   section{
     flex-direction: column-reverse;
@@ -210,7 +211,7 @@ section .imgBx img{
     margin-top: 20px;
   }
   section .imgBx img{
-    max-width: 300px;
+    min-width: 300px;
   }
   .sci{
     left:50px;
